--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,10 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+
+#DjangoGirl ignore files
+*.pyc
+__pycache__
+myenv
+db.sqlite3
+.DS_Store
